# rust-quest

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/alloy_encode_decode_calldata/: Cargo.toml
crates/alloy_rpc_calls/: Cargo.toml
crates/alloy_uniswap_swap_simulator/: Cargo.toml
crates/axum_api_key_auth/: Cargo.toml
crates/axum_api_rate_limit_by_user/: Cargo.toml
crates/axum_auth_jwt/: Cargo.toml
crates/axum_auth_oauth2/: Cargo.toml
crates/axum_auth_password/: Cargo.toml
crates/axum_echo_data/: Cargo.toml
crates/axum_file_upload/: Cargo.toml
crates/axum_hello_world/: Cargo.toml
crates/axum_link_shortener/: Cargo.toml
crates/axum_middleware/: Cargo.toml
crates/axum_query_para/: Cargo.toml
crates/axum_uuid_return/: Cargo.toml
crates/crud_sqlite/: Cargo.toml
crates/csv_rw/: Cargo.toml
crates/diesel_postgres/: Cargo.toml
crates/diesel_sqlite/: Cargo.toml
crates/duckdb_hello_world/: Cargo.toml
crates/duckdb_parquet/: Cargo.toml
crates/file_reader/: README.md
crates/file_writer/: Cargo.toml  README.md
crates/hype_ws_read/: Cargo.toml
crates/hype_ws_rw/: Cargo.toml
crates/json_crud/: Cargo.toml
crates/json_reader/: Cargo.toml  README.md  input_json_reader.json
crates/json_writer/: Cargo.toml
crates/mpsc_hello_world/: Cargo.toml
crates/mpsc_hyperliquid/: Cargo.toml
crates/package_json_generator/: Cargo.toml
crates/parquet_hello_world/: Cargo.toml
crates/simple_avg/: Cargo.toml  README.md
crates/ws_hello_world/: Cargo.toml
crates/ws_rw/: Cargo.toml
crates/yaml_reader/: Cargo.toml
(+6 files in other folders)
